--- a/Hax/Hax/Hax.csproj
+++ b/Hax/Hax/Hax.csproj
@@ -84,6 +84,9 @@
     <Content Include="Content\idle2.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\jump.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\mario_jump.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
