--- a/Hax/Hax/Hax.csproj
+++ b/Hax/Hax/Hax.csproj
@@ -41,6 +41,12 @@
     <Compile Include="Goal.cs" />
     <Compile Include="ImageBank.cs" />
     <Compile Include="InputWindow.cs" />
+    <Compile Include="MainMenu1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainMenu1.Designer.cs">
+      <DependentUpon>MainMenu1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Map.cs" />
     <Compile Include="Movable.cs" />
     <Compile Include="MovingPlatform.cs" />
@@ -50,6 +56,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Unit.cs" />
     <Compile Include="WalkingMinion.cs" />
     <Compile Include="Wall.cs" />
@@ -64,6 +75,9 @@
     <Reference Include="Lidgren.Network">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\Lidgren.Network.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="Tao.Sdl">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\Tao.Sdl.dll</HintPath>
     </Reference>
@@ -121,6 +135,15 @@
     <Content Include="Content\mario_stand.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MainMenu1.resx">
+      <DependentUpon>MainMenu1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
