--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,12 @@ local.properties
 
 # Build results
 
-
+[Dd]ebug/
+[Rr]elease/
+x64/
+build/
+[Bb]in/
+[Oo]bj/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
